# lidar-confidence

./: .gitignore  README.md  environment.yml  hubconf.py  mypy.ini  params.yaml  setup.cfg  setup.py  torchhub-example.ipynb  tox.ini
.dvc/: config
data/: dataset.dvc
experiments/: dvc.yaml
experiments/baselines/: dvc.yaml
experiments/baselines/ncnn/: test.py
experiments/baselines/ncnn/models/ncnn_conf_l1/: model.pth.dvc
experiments/baselines/ncnn/models/ncnn_conf_l1_kitti_limited/: args.json  model.pth.dvc
experiments/baselines/ncnn/models/ncnn_conf_l2/: model.pth.dvc
experiments/baselines/ncnn/models/ncnn_conf_l2_kitti_limited/: args.json  model.pth.dvc
experiments/baselines/ncnn/models/pncnn/: model.pth.dvc
experiments/baselines/ncnn/models/pncnn_exp/: model.pth.dvc
experiments/baselines/ncnn/models/pncnn_exp_kitti_limited/: args.json  model.pth.dvc
experiments/baselines/ncnn/models/pncnn_kitti_limited/: args.json  model.pth.dvc
experiments/baselines/surface_geometry_model/: .gitignore  README.md  test_1_masks.dvc  test_2_masks.dvc
experiments/lce/: model.py  train.py
notebooks/: report.ipynb
results/: report.ipynb
results/baselines/: ncnn_conf_l1.json  ncnn_conf_l1_kitti_limited.json  ncnn_conf_l2.json  ncnn_conf_l2_kitti_limited.json  pncnn.json  pncnn_exp.json  pncnn_exp_kitti_limited.json  pncnn_kitti_limited.json
results/lce/: .gitignore  lce.json
src/lidar_confidence/: __init__.py  dataset.py  image.py  metrics.py
