[metadata]
name = lidar-confidence
maintainer = andrea conti
maintainer_email = andrea.conti@tutanota.com
version = attr: lidar_confidence.__version__
description = Lidar Confidence Estimation
long_description = file: README.md

[options]
package_dir =
    =src
packages = find:
install_requires = 
    torch>=1.7.0
    torchvision>=0.8.0
    pytorch-lightning>=1.0, <2.0
    wandb>=0.10, <1.0
    matplotlib>=3.0, <4.0
    opencv-python>=4.5, <5.0
    cmapy>=0.6, <1.0
    jupyterlab

[options.extras_require]
dev =
    pytest
    ipython
    pre-commit
    isort
    pycodestyle
    pyflakes
    black
    mypy
    python-language-server
    pyls-black
    pyls-mypy

[options.packages.find]
where = src
